[package]
name = "guessing_game"
version = "0.1.0"
authors = ["Alexander Potukar <alexander.potukar@eon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
#rspec = { git = "https://github.com/rust-rspec/rspec" }
rspec = "0.1"
clap = "3.0.0-beta.2"